wicket-examples/src/java/wicket/examples/signin2/SignIn2#SignIn2(PageParameters).mjava
    /**
     * Constructor
     * @param parameters The page parameters
     */
    public SignIn2(final PageParameters parameters)
    {
        super(new SignIn2Panel("signInPanel")
        {
            public String signIn(RequestCycle cycle, String username, String password)
            {
                // Sign the user in
                if (username.equals("jonathan") && password.equals("password"))
                {
                    // successfully signed in.
                    cycle.getSession().setProperty("wicket.examples.signin2.user", "jonathan");
                    
                    // Depending on user's choice, remember me or not
                    this.setPersistent(this.getRememberMe());
                    return null;
                }

                // error
                return "Couldn't sign you in";
            }
        });
    }

